--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "clsx": "^2.1.1",
     "next": "14.2.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "@types/node": "^20.14.2",
