--- a/package.json
+++ b/package.json
@@ -27,5 +27,11 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
+  },
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "@vercel/speed-insights",
+      "sharp"
+    ]
   }
 }
